<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.post.it.evoting.verifier</groupId>
    <artifactId>verifier</artifactId>
    <packaging>pom</packaging>
    <version>1.0.2.0-SNAPSHOT</version>

    <developers>
        <developer>
            <name>Nils Aellen</name>
            <email>nils.aellen@post.ch</email>
            <roles>
                <role>developer</role>
                <role>architect</role>
            </roles>
        </developer>
        <developer>
            <name>Thierry Lalandre</name>
            <email>thierry.lalandre@post.ch</email>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://gitit.post.ch/scm/evoting/verifier.git</connection>
        <developerConnection>scm:git:https://gitit.post.ch/scm/evoting/verifier.git</developerConnection>
        <url>https://gitit.post.ch/scm/evoting/verifier.git</url>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>artifactory-releases</id>
            <name>artifactory.pnet.ch-releases</name>
            <url>http://artifactory.pnet.ch/artifactory/libs-release-local</url>
        </repository>
        <snapshotRepository>
            <id>artifactory-snapshots</id>
            <name>artifactory.pnet.ch-snapshots</name>
            <url>http://artifactory.pnet.ch/artifactory/libs-snapshot-local</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>2.9.8</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.9.8</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-xml</artifactId>
                <version>2.9.8</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${maven.jacoco.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${maven.jacoco.plugin.version}</version>
                <executions>
                    <execution>
                        <id>prepare-unit-test-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>generate-unit-test-report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.8.2</version>
            </plugin>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <inherited>true</inherited>
                <configuration>
                    <preparationGoals>clean install</preparationGoals>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>licence</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.mycila</groupId>
                        <artifactId>license-maven-plugin</artifactId>
                        <version>3.0</version>
                        <configuration>
                            <basedir>${basedir}</basedir>
                            <header>license-post-header.txt</header>
                            <mapping>
                                <java>SLASHSTAR_STYLE</java>
                                <ts>SLASHSTAR_STYLE</ts>
                            </mapping>
                            <includes>
                                <include>**/*.java</include>
                                <include>**/*.html</include>
                                <include>**/*.js</include>
                                <include>**/*.ts</include>
                            </includes>
                            <excludes>
                                <exclude>**/target/**</exclude>
                                <exclude>**/bower_components/**</exclude>
                                <exclude>**/build/**</exclude>
                                <exclude>**/dist/**</exclude>
                                <exclude>**/node_modules/**</exclude>
                                <exclude>**/**.conf.js</exclude>
                            </excludes>
                            <properties>
                                <currentYear>2019</currentYear>
                            </properties>
                            <useDefaultExcludes>true</useDefaultExcludes>
                            <strictCheck>true</strictCheck>
                            <aggregate>true</aggregate>
                            <keywords>
                                <keyword>This file is part of Verifier Swiss Post.</keyword>
                            </keywords>
                        </configuration>
                        <executions>
                            <execution>
                                <id>licence-format</id>
                                <phase>compile</phase>
                                <goals>
                                    <goal>format</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>licence-check</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <modules>
        <module>verifier-common</module>
        <module>verifier-common-block</module>
        <module>verifier-block1</module>
        <module>verifier-block2</module>
        <module>verifier-block3</module>
        <module>verifier-block4</module>
        <module>verifier-web-client</module>
        <module>verifier-web</module>
        <module>verifier-assembly</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <rootProject>verifier</rootProject>
        <projectVersion>${project.version}</projectVersion>
        <projectGroupId>${project.groupId}</projectGroupId>
        <projectArtifactId>${project.artifactId}</projectArtifactId>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.jacoco.plugin.version>0.7.6.201602180812</maven.jacoco.plugin.version>
    </properties>
</project>
